--- a/cmcc.html
+++ b/cmcc.html
@@ -114,7 +114,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Завідувач відділу</div>
-                  <a href="pablick/otd7/cv/CV_Явецький_Відділ 7.pdf" class="people-name" target="blanck">Явецький Роман Павлович</a>
+                  <a href="pablick/otd7/cv/CV_Yavetsky_7.pdf" class="people-name" target="blanck">Явецький Роман Павлович</a>
                   <p>Доктор технічних наук, професор</p>
                 </div>
                 <div class="people-contact">
@@ -137,7 +137,7 @@
               <div class="card-img"><img src="images/Tolmachov.jpg" alt="Толмачов О.В"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd7/cv/CV_Толмачов.pdf" class="people-name" target="blanck">Толмачов Олександр Володимирович</a>
+                  <a href="pablick/otd7/cv/CV_Tolmachov.pdf" class="people-name" target="blanck">Толмачов Олександр Володимирович</a>
                   <p>Головний науковий співробітник, член-кореспондент Національної академії наук України, доктор фізико-математичних наук, професор.</p>
                 </div>
                 <div class="people-contact">
@@ -158,7 +158,7 @@
               <div class="card-img"><img src="images/Litvinov.jpg" alt="Литвинов"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd7/cv/CV_Литвинов_Відділ 7.pdf" class="people-name" target="blanck">Литвинов Леонід Аркадієвич</a>
+                  <a href="pablick/otd7/cv/CV_Litvinov_7.pdf" class="people-name" target="blanck">Литвинов Леонід Аркадієвич</a>
                   <p>Провiдний науковий спiвробiтник, доктор фізико-математичних  наук, старший науковий співробітник</p>
                 </div>
                 <div class="people-contact">
@@ -178,7 +178,7 @@
               <div class="card-img"><img src="images/Dobrotvorska.jpg" alt="Добротворська"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd7/cv/CV_Добротворська_Відділ 7.pdf" class="people-name" target="blanck">Добротворська Марія Вікторівна</a>
+                  <a href="pablick/otd7/cv/CV_Dobrotvorska_7.pdf" class="people-name" target="blanck">Добротворська Марія Вікторівна</a>
                   <p>Cтарша наукова співробітниця, кандидатка фізико-математичних наук, старша дослідниця</p>
                 </div>
                 <div class="people-contact">
@@ -199,7 +199,7 @@
               <div class="card-img"><img src="images/Doroshenko.jpg" alt="Дорошенко"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd7/cv/CV_Дорошенко_Відділ 7.pdf" class="people-name" target="blanck">Дорошенко Андрій Григорович</a>
+                  <a href="pablick/otd7/cv/CV_Doroshenko_7.pdf" class="people-name" target="blanck">Дорошенко Андрій Григорович</a>
                   <p>Докторант, кандидат технічних  наук</p>
                 </div>
                 <div class="people-contact">
@@ -220,7 +220,7 @@
               <div class="card-img"><img src="images/Parkhomenko.jpg" alt="Пархоменко"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd7/cv/CV_Пархоменко_Відділ 7.pdf" class="people-name" target="blanck">Пархоменко Сергій Володимирович</a>
+                  <a href="pablick/otd7/cv/CV_Parkhomenko_7.pdf" class="people-name" target="blanck">Пархоменко Сергій Володимирович</a>
                   <p>Старший науковий співробітник,  кандидат технічних наук</p>
                 </div>
                 <div class="people-contact">
@@ -240,7 +240,7 @@
               <div class="card-img"><img src="images/Kryzhanovska.jpg" alt="Крижановська"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd7/cv/CV_Крижановська_Відділ 7.pdf" class="people-name" target="blanck">Крижановська Олександра Сергіївна</a>
+                  <a href="pablick/otd7/cv/CV_Kryzhanovska_7.pdf" class="people-name" target="blanck">Крижановська Олександра Сергіївна</a>
                   <p>Старша наукова співробітниця, кандидатка технічних наук</p>
                 </div>
                 <div class="people-contact">
@@ -260,7 +260,7 @@
               <div class="card-img"><img src="images/Safronova.JPG" alt="Сафронова"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd7/cv/CV_Сафронова_Відділ 7.pdf" class="people-name" target="blanck">Сафронова Надія Андріївна</a>
+                  <a href="pablick/otd7/cv/CV_Safronova_7.pdf" class="people-name" target="blanck">Сафронова Надія Андріївна</a>
                   <p>Наукова співробітниця, кандидатка технічних наук</p>
                 </div>
                 <div class="people-contact">
@@ -280,7 +280,7 @@
               <div class="card-img"><img src="images/Vorona.jpg" alt="Ворона"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd7/cv/CV_Ворона_Відділ 7.pdf" class="people-name" target="blanck">Ворона Ігор Олегович</a>
+                  <a href="pablick/otd7/cv/CV_Vorona_7.pdf" class="people-name" target="blanck">Ворона Ігор Олегович</a>
                   <p>Науковий спiвробiтник, кандидат фізико-математичних наук</p>
                 </div>
                 <div class="people-contact">
@@ -301,7 +301,7 @@
               <div class="card-img"><img src="images/Mateichenko.jpg" alt="Матейченко"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd7/cv/CV_Матейченко_Відділ 7.pdf" class="people-name" target="blanck">Матейченко Павло Вікторович</a>
+                  <a href="pablick/otd7/cv/CV_Mateichenko_7.pdf" class="people-name" target="blanck">Матейченко Павло Вікторович</a>
                   <p>Науковий співробітник</p>
                 </div>
                 <div class="people-contact">
@@ -321,7 +321,7 @@
               <div class="card-img"><img src="images/Matvienko.jpg" alt="Матвієнко"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd7/cv/CV_Матвієнко_Відділ 7.pdf" class="people-name" target="blanck">Матвієнко Оксана Олегівна</a>
+                  <a href="pablick/otd7/cv/CV_Matvienko_7.pdf" class="people-name" target="blanck">Матвієнко Оксана Олегівна</a>
                   <p>Інженерка 1 категорії</p>
                 </div>
                 <div class="people-contact">
@@ -340,7 +340,7 @@
               <div class="card-img"><img src="images/Balabanov.jpg" alt="Балабанов"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd7/cv/CV_Балабанов_Відділ 7.pdf" class="people-name" target="blanck">Балабанов Антон Едуардович</a>
+                  <a href="pablick/otd7/cv/CV_Balabanov_7.pdf" class="people-name" target="blanck">Балабанов Антон Едуардович</a>
                   <p>Аспірант</p>
                 </div>
                 <div class="people-contact">
@@ -360,7 +360,7 @@
               <div class="card-img"><img src="images/Tymoshenko.jpg" alt="Тимошенко"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd7/cv/CV_Тимошенко_Відділ 7.pdf" class="people-name" target="blanck">Тимошенко Арсеній Дмитрович</a>
+                  <a href="pablick/otd7/cv/CV_Tymoshenko_7.pdf" class="people-name" target="blanck">Тимошенко Арсеній Дмитрович</a>
                   <p>Аспірант</p>
                 </div>
                 <div class="people-contact">
