--- a/leadership.html
+++ b/leadership.html
@@ -122,7 +122,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Заcтупник директора з загальних питань</div>
-                  <a href="pablick/руководство/cv/CV_Верещак.pdf" class="people-name" target="blanck">Верещак Олександр Іванович</a>
+                  <a href="pablick/руководство/cv/CV_Vereshchak.pdf" class="people-name" target="blanck">Верещак Олександр Іванович</a>
                 </div>
                 <div class="people-contact">
                   <a href="#peole-contact-holder-2" class="people-contact-link" uk-toggle="target: #peole-contact-holder-2; animation: uk-animation-fade">Контакти</a>
@@ -143,7 +143,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Заступник директора з наукової роботи</div>
-                  <a href="pablick/otd7/cv/CV_Толмачов.pdf" class="people-name" target="blanck">Толмачов Олександр Володимирович</a>
+                  <a href="pablick/otd7/cv/CV_Tolmachov.pdf" class="people-name" target="blanck">Толмачов Олександр Володимирович</a>
                   <p>Член-кореспондент НАН України, доктор фізико-математичних наук, професор.</p>
                 </div>
                 <div class="people-contact">
@@ -165,7 +165,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Заступниця директора з зовнішньоекономічної діяльності</div>
-                  <a href="pablick/руководство/cv/СV_Лемішенко.pdf" class="people-name" target="blanck">Лемішенко Ірина Генадіївна</a>
+                  <a href="pablick/руководство/cv/СV_Lemishenko.pdf" class="people-name" target="blanck">Лемішенко Ірина Генадіївна</a>
                 </div>
                 <div class="people-contact">
                   <a href="#peole-contact-holder-4" class="people-contact-link" uk-toggle="target: #peole-contact-holder-4; animation: uk-animation-fade">Контакти</a>
