--- a/olc.html
+++ b/olc.html
@@ -114,7 +114,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Завідувач відділу</div>
-                  <a href="pablick/23/cv/CV_Ніжанковський_Відділ 23.pdf" class="people-name" target="blanck">Ніжанковський Сергій Вікторович </a>
+                  <a href="pablick/23/cv/CV_Nizhankovsky_23.pdf" class="people-name" target="blanck">Ніжанковський Сергій Вікторович </a>
                   <p>Кандидат технічних наук, старший дослідник.</p>
                 </div>
                 <div class="people-contact">
@@ -135,7 +135,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Заступник завідувача відділу</div>
-                  <a href="pablick/23/cv/CV_Гринь_Відділ 23.pdf" class="people-name" target="blanck">Гринь Леонід Олексійович</a>
+                  <a href="pablick/23/cv/CV_Grin_23.pdf" class="people-name" target="blanck">Гринь Леонід Олексійович</a>
                   <p>Кандидат фізико-математичних наук. </p>
                 </div>
                 <div class="people-contact">
@@ -155,7 +155,7 @@
               <div class="card-img"><img src="images/Shekhovtsov.jpg" alt="Шеховцов"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/23/cv/CV_Шеховцов_Відділ 23.pdf" class="people-name" target="blanck">Шеховцов Олексій Миколайович</a>
+                  <a href="pablick/23/cv/CV_Shekhovtsov_23.pdf" class="people-name" target="blanck">Шеховцов Олексій Миколайович</a>
                   <p>Cтарший науковий спiвробiтник, доктор технічних наук, старший дослідник</p>
                 </div>
                 <div class="people-contact">
@@ -175,7 +175,7 @@
               <div class="card-img"><img src="images/Oleh-VovK.jpg" alt="Вовк"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/23/cv/CV_Вовк Олег_Відділ 23.pdf" class="people-name" target="blanck">Вовк Олег Михайлович </a>
+                  <a href="pablick/23/cv/CV_Oleh-VovK_23.pdf" class="people-name" target="blanck">Вовк Олег Михайлович </a>
                   <p>Старший науковий співробітник, кандидат хімічних наук, старший дослідник</p>
                 </div>
                 <div class="people-contact">
@@ -195,7 +195,7 @@
               <div class="card-img"><img src="images/Vovk.jpg" alt="Вовк Олена"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/23/cv/CV_Вовк Олена_Відділ 23.pdf" class="people-name" target="blanck">Вовк Олена Олександрівна</a>
+                  <a href="pablick/23/cv/CV_Vovk_23.pdf" class="people-name" target="blanck">Вовк Олена Олександрівна</a>
                   <p>Старша наукова спiвробiтниця, кандидатка технічних наук, старша наукова спiвробiтниця</p>
                 </div>
                 <div class="people-contact">
@@ -215,7 +215,7 @@
               <div class="card-img"><img src="images/Voloshin.jpg" alt="Волошин"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/23/cv/CV_Волошин_Відділ 23.pdf" class="people-name" target="blanck">Волошин Олександр Вікторович</a>
+                  <a href="pablick/23/cv/CV_Voloshin_23.pdf" class="people-name" target="blanck">Волошин Олександр Вікторович</a>
                   <p>Старший науковий спiвробiтник, кандидат технічних наук</p>
                 </div>
                 <div class="people-contact">
@@ -234,7 +234,7 @@
               <div class="card-img"><img src="images/Sidelnikova.jpg" alt="Cідельнікова"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/23/cv/CV_Сідельнікова_Відділ 23.pdf" class="people-name" target="blanck">Cідельнікова Наталія Степанівна</a>
+                  <a href="pablick/23/cv/CV_Sidelnikova_23.pdf" class="people-name" target="blanck">Cідельнікова Наталія Степанівна</a>
                   <p>Старша наукова спiвробiтниця, кандидатка фізико-математичних наук</p>
                 </div>
                 <div class="people-contact">
@@ -253,7 +253,7 @@
               <div class="card-img"><img src="images/Kryvonohov.jpg" alt="Кривоногов"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/23/cv/CV_ Кривоногов_Відділ 23.pdf" class="people-name" target="blanck">Кривоногов Сергій Іванович </a>
+                  <a href="pablick/23/cv/CV_Kryvonohov_23.pdf" class="people-name" target="blanck">Кривоногов Сергій Іванович </a>
                   <p>Науковий спiвробiтник, кандидат технічних наук </p>
                 </div>
                 <div class="people-contact">
@@ -272,7 +272,7 @@
               <div class="card-img"><img src="images/Kozlovsky.jpg" alt="Козловський"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/23/cv/CV_Козловський_Відділ 23.pdf" class="people-name" target="blanck">Козловський Анатолій Антонович</a>
+                  <a href="pablick/23/cv/CV_Kozlovsky_23.pdf" class="people-name" target="blanck">Козловський Анатолій Антонович</a>
                   <p>Науковий спiвробiтник, кандидат фізико-математичних наук</p>
                 </div>
                 <div class="people-contact">
@@ -291,7 +291,7 @@
               <div class="card-img"><img src="images/Baranov.JPG" alt="Баранов"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/23/cv/CV_Баранов_Відділ 23.pdf" class="people-name" target="blanck">Баранов Вячеслав Валерійович</a>
+                  <a href="pablick/23/cv/CV_Baranov_23.pdf" class="people-name" target="blanck">Баранов Вячеслав Валерійович</a>
                   <p>Молодший науковий спiвробiтник, кандидат технічних наук</p>
                 </div>
                 <div class="people-contact">
@@ -310,7 +310,7 @@
               <div class="card-img"><img src="images/Syrik.jpg" alt="Сірик"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/23/cv/CV_Сірик_Відділ 23.pdf" class="people-name" target="blanck">Сірик Юрій Вікторович</a>
+                  <a href="pablick/23/cv/CV_Syrik_23.pdf" class="people-name" target="blanck">Сірик Юрій Вікторович</a>
                   <p>Аспірант</p>
                 </div>
                 <div class="people-contact">
