--- a/tcfs.html
+++ b/tcfs.html
@@ -113,7 +113,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <div class="people-status">Завідувач відділу</div>
-                  <a href="pablick/otd1/cv/CV_Яновський_Відділ 1.pdf" class="people-name" target="blanck">Яновський Володимир Володимирович</a>
+                  <a href="pablick/otd1/cv/CV_Yanovsky_1.pdf" class="people-name" target="blanck">Яновський Володимир Володимирович</a>
                   <p>Доктор фізико-математичних наук, професор</p>
                 </div>
                 <div class="people-contact">
@@ -136,7 +136,7 @@
               <div class="card-img"><img src="images/fil.jpg" alt="Філь"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd1/cv/CV_Філь_Відділ 1.pdf" class="people-name" target="blanck">Філь Дмитро Вячеславович</a>
+                  <a href="pablick/otd1/cv/CV_fil_1.pdf" class="people-name" target="blanck">Філь Дмитро Вячеславович</a>
                   <p>Провiдний науковий спiвробiтник, доктор фізико-математичних  наук, старший науковий співробітник</p>
                 </div>
                 <div class="people-contact">
@@ -156,7 +156,7 @@
               <div class="card-img"><img src="images/brodsky.jpg" alt="Бродський"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd1/cv/CV_Бродський_Відділ 1.pdf" class="people-name" target="blanck">Бродський Роман Євгенійович</a>
+                  <a href="pablick/otd1/cv/CV_brodsky_1.pdf" class="people-name" target="blanck">Бродський Роман Євгенійович</a>
                   <p>Старший науковий співробітник, кандидат фізико-математичних наук</p>
                 </div>
                 <div class="people-contact">
@@ -176,7 +176,7 @@
               <div class="card-img"><img src="images/ratner.jpg" alt="Ратнер"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd1/cv/CV_Ратнер_Відділ 1.pdf" class="people-name" target="blanck">Ратнер Марина Анатоліївна</a>
+                  <a href="pablick/otd1/cv/CV_ratner_1.pdf" class="people-name" target="blanck">Ратнер Марина Анатоліївна</a>
                   <p>Старша наукова спiвробiтниця, кандидатка фізико-математичних наук</p>
                 </div>
                 <div class="people-contact">
@@ -216,7 +216,7 @@
               <div class="card-img"><img src="images/kopp.png" alt="Копп"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd1/cv/CV_Копп_Відділ 1.pdf" class="people-name" target="blanck">Копп Михайло Йосипович</a>
+                  <a href="pablick/otd1/cv/CV_kopp_1.pdf" class="people-name" target="blanck">Копп Михайло Йосипович</a>
                   <p>Старший науковий спiвробiтник, кандидат фізико-математичних наук</p>
                 </div>
                 <div class="people-contact">
@@ -235,7 +235,7 @@
               <div class="card-img"><img src="images/kravchenko.jpg" alt="Кравченко"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd1/cv/CV_Кравченко_Відділ 1.pdf" class="people-name" target="blanck">Кравченко Людмила Юріївна</a>
+                  <a href="pablick/otd1/cv/CV_kravchenko_1.pdf" class="people-name" target="blanck">Кравченко Людмила Юріївна</a>
                   <p>Наукова спiвробiтниця, кандидатка фізико-математичних наук</p>
                 </div>
                 <div class="people-contact">
@@ -254,7 +254,7 @@
               <div class="card-img"><img src="images/Maslovsky.jpg" alt="Масловський"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd1/cv/CV_Масловський_Відділ 1.pdf" class="people-name" target="blanck">Масловський Юрій Миколайович</a>
+                  <a href="pablick/otd1/cv/CV_Maslovsky_1.pdf" class="people-name" target="blanck">Масловський Юрій Миколайович</a>
                   <p>Науковий спiвробiтник, кандидат фізико-математичних наук</p>
                 </div>
                 <div class="people-contact">
@@ -273,7 +273,7 @@
               <div class="card-img"><img src="images/naplekov.png" alt="Наплеков"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd1/cv/CV_Наплеков_Відділ 1.pdf" class="people-name" target="blanck">Наплеков Дмитро Михайлович</a>
+                  <a href="pablick/otd1/cv/CV_naplekov_1.pdf" class="people-name" target="blanck">Наплеков Дмитро Михайлович</a>
                   <p>Науковий співробітник, кандидат фізико-математичних наук</p>
                 </div>
                 <div class="people-contact">
@@ -292,7 +292,7 @@
               <div class="card-img"><img src="images/hermash.png" alt="Гермаш"></div>
               <div class="card-text">
                 <div class="card-text-top">
-                  <a href="pablick/otd1/cv/CV _Гермаш_Відділ 1.pdf" class="people-name" target="blanck">Гермаш Костянтин Володимирович</a>
+                  <a href="pablick/otd1/cv/CV_hermash_1.pdf" class="people-name" target="blanck">Гермаш Костянтин Володимирович</a>
                   <p>Молодший науковий співробітник, кандидат фізико-математичних наук</p>
                 </div>
                 <div class="people-contact">
