--- a/cente-collective-use-scientific-instruments.html
+++ b/cente-collective-use-scientific-instruments.html
@@ -113,7 +113,7 @@
             <li>Система комплексної прецизійної пробопідготовки зразків для електронної
               мікроскопії Leica EM TXP (Leica Microsystems, Німеччина).</li>
           </ol>
-          <p><a href="pablick/Положення про ЦККП.pdf" target="blank">Положення про Центр колективного користування науковими приладами (pdf)</a></p>
+          <p><a href="pablick/Polozhennya pro TSKKP.pdf" target="blank">Положення про Центр колективного користування науковими приладами (pdf)</a></p>
         </div>
       </section>
 		</main>
