--- a/olc-publications.html
+++ b/olc-publications.html
@@ -15,7 +15,7 @@
       <header id="header">
         <div class="container">
           <div class="header-top">
-            <a href="home.html" class="logo-holder">
+            <a href="index.html" class="logo-holder">
               <img src="images/logo.svg" alt="Інститут монокристалів НАН України" class="logo-img">
             </a>
             <div class="header-contact">
